--- a/styles/utility.css
+++ b/styles/utility.css
@@ -32,7 +32,15 @@
     display: grid;
     gap: 1rem;
 }
-
+.grid{
+    display: grid;
+}
+.flex{
+    display: flex;
+}
+.gap-1{
+    gap:1rem;
+}
 @media (width >=80em) {
     .container {
         --max-width: 80em;
