--- a/styles/utility.css
+++ b/styles/utility.css
@@ -20,7 +20,7 @@
 .container {
     --max-width: 375px;
     width: min(var(--max-width), 100% - var(--px-lg) * 2);
-    border: 1px solid blue;
+
     margin-inline: auto;
 }
 
@@ -41,8 +41,16 @@
     display: flex;
 }
 
+.items-center {
+    align-items: center;
+}
+
 .gap-1 {
     gap: 1rem;
+}
+
+.gap-1\.5 {
+    gap: 1.5rem;
 }
 
 @media (width >=80em) {
