--- a/styles/buttons.css
+++ b/styles/buttons.css
@@ -19,7 +19,9 @@
     --btn-bg-color: linear-gradient(90deg,
             var(--brand-color-secondary) 0%, var(--brand-color-primary) 100%);
     --btn-color: var(--surface-color);
-
+    -webkit-background-clip: initial;
+    background-clip: initial;
+    color: var(--bg-color);
 }
 
 .btn-lg {
@@ -57,4 +59,18 @@
         position: relative;
         z-index: 1;
     }
+}
+
+@media (width>=80em) {
+    .btn-md {
+        font-size: var(--fs-sm);
+        padding: 1rem 2rem;
+    }
+
+    .btn-sm {
+        font-size: var(--fs-base);
+        padding: .75rem 1.5rem;
+    }
+
+    
 }
