--- a/styles/global.css
+++ b/styles/global.css
@@ -91,7 +91,10 @@ a:hover{
 ul[role="list"] {
     list-style: none;
 }
-
+img{
+        max-width: 100%;
+        display: inline-block;
+    }
 @media(width>=80em) {
     :root {
         --fs-lg: 2rem;
