--- a/styles/index.css
+++ b/styles/index.css
@@ -6,3 +6,7 @@
 @import url(hero.css);
 @import url(sections.css);
 @import url(about.css);
+@import url(cards.css);
+@import url(features.css) (width>=80em);
+
+@import url(pricing.css);
