sessao de download concluida

--- a/styles/global.css
+++ b/styles/global.css
@@ -45,7 +45,7 @@ html {
     font-size: var(--fs-base);
     line-height: 1.6;
     color: var(--text-color-primary);
-
+    overflow-x: hidden;
 }
 
 body {
@@ -60,7 +60,9 @@ h3 {
     font-weight: var(--fw-bold);
     letter-spacing: -0.04em;
 }
-
+p{
+    color: var(--text-color-secondary);
+}
 h1 {
     font-size: var(--fs-2xl);
 }
