--- a/styles/index.css
+++ b/styles/index.css
@@ -8,5 +8,6 @@
 @import url(about.css);
 @import url(cards.css);
 @import url(features.css) (width>=80em);
-
 @import url(pricing.css);
+@import url(dowload.css);
+@import url(footer.css);
