--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,3 +1,70 @@
-#footer{
-    
+footer {
+    color: var(--text-color-secondary);
+    font-weight: var(--fw-md);
+
+    & .container {
+        padding-inline: 3rem;
+    }
+
+    & .container,
+    & .top {
+        gap: 3rem;
+
+    }
+
+    & nav .even-columns {
+        gap: 4rem;
+    }
+
+    & .title {
+        font-size: 0.75rem;
+        text-transform: uppercase;
+        letter-spacing: 0.08em;
+        color: var(--brand-color-primary);
+    }
+
+    & .top ul {
+        align-content: flex-start;
+    }
+
+    & .bottom {
+
+
+        flex-wrap: wrap;
+
+        &>div {
+            margin-right: auto;
+        }
+
+        .copy {
+            font-size: 0.875rem;
+        }
+    }
+
+}
+
+@media(width>=80em) {
+    footer {
+        & .container {
+            padding-inline: 0;
+            padding-bottom: 2rem;
+
+        }
+
+        & .top {
+            grid-template-columns: auto 1fr;
+
+            & nav {
+                margin-left: auto;
+
+                & ul {
+                    width: 14rem;
+                }
+            }
+        }
+
+        & nav .even-columns {
+            gap: 6rem;
+        }
+    }
 }
